--- a/SYMFONY/config/services.yaml
+++ b/SYMFONY/config/services.yaml
@@ -1,11 +1,14 @@
-# This file is the entry point to configure your own services.
-# Files in the packages/ subdirectory configure your dependencies.
+# config/services.yaml
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
 
 services:
+    # Déclarez votre contrôleur en tant que service public
+    App\Controller\YourController:
+        public: true
+
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
