--- a/SYMFONY/config/packages/security.yaml
+++ b/SYMFONY/config/packages/security.yaml
@@ -22,8 +22,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_EXPERT }
+        - { path: ^/profile, roles: ROLE_SENIOR }
+         - { path: ^/profile2, roles: ROLE_APPRENTI }
 
 when@test:
     security:
