--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -37,10 +37,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+ MAILER_DSN=smtp://cleanthis153:manqs154@smtp.gmail.com:465?encryption=ssl&auth_mode=login
 ###< symfony/mailer ###
-
-###> symfony/google-mailer ###
-# Gmail SHOULD NOT be used on production, use it in development only.
- MAILER_DSN=gmail://cleanthis153@gmail.com:PASSWORD@manqs154
-###< symfony/google-mailer ###
