--- a/SYMFONY/config/routes.yaml
+++ b/SYMFONY/config/routes.yaml
@@ -4,3 +4,11 @@ controllers:
         namespace: App\Controller
     type: attribute
 
+redirection_vue:
+    path: /redirection
+    controller: App\Controller\YourController::yourAction
+
+login_vue:
+    path: /Login
+    controller: App\Controller\LoginController::login
+
