mail de contact vérifié

--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -33,9 +33,16 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/CleanThis?serverVersion=10.11.2-MariaD
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MAILER_DSN=smtp://smtp.gmail.com:587?encryption=tls&auth_mode=oauth2&username=cleanthis154@gmail.com&password=your_access_token
+
+#MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
- MAILER_DSN=smtp://cleanthis153:manqs154@smtp.gmail.com:465?encryption=ssl&auth_mode=login
+#MAILER_DSN=smtp://0164ca192a2e6b:5aee3229cccc30@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+
+###> symfony/mailjet-mailer ###
+MAILER_DSN=mailjet+api://cce965de02ab6f704665944055aaca6b:b70070aba26c7358977cd946ab085588@api.mailjet.com
+# #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com
+###< symfony/mailjet-mailer ###
