--- a/SYMFONY/phpunit.xml.dist
+++ b/SYMFONY/phpunit.xml.dist
@@ -20,6 +20,11 @@
         <!-- Gmail SHOULD NOT be used on production, use it in development only. -->
         <!-- MAILER_DSN=gmail://USERNAME:PASSWORD@default -->
         <!-- ###- symfony/google-mailer ### -->
+
+        <!-- ###+ symfony/mailjet-mailer ### -->
+        <!-- MAILER_DSN=mailjet+api://PUBLIC_KEY:PRIVATE_KEY@api.mailjet.com -->
+        <!-- #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com -->
+        <!-- ###- symfony/mailjet-mailer ### -->
     </php>
 
     <testsuites>
