--- a/SYMFONY/config/services.yaml
+++ b/SYMFONY/config/services.yaml
@@ -3,6 +3,9 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
+parameters:
+    admin_email: 'cleanthis154@gmail.com'
+
 services:
     # default configuration for services in *this* file
     _defaults:
@@ -21,9 +24,8 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-    # Autres services...
-
     App\Service\MailService:
         arguments:
+            $adminEmail: '%admin_email%'
             $mailer: '@Symfony\Component\Mailer\MailerInterface'
             $twig: '@twig'
