--- a/SYMFONY/config/routes.yaml
+++ b/SYMFONY/config/routes.yaml
@@ -9,3 +9,7 @@ controllers:
 app_login:
     path: /login
     controller: App\Controller\SecurityController::login
+
+confirmation:
+    path: /confirmation
+    controller: App\Controller\ConfirmationController::index
