ajouts des liasions pour acceder à la base de données

--- a/SYMFONY/config/routes.yaml
+++ b/SYMFONY/config/routes.yaml
@@ -3,3 +3,6 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+operation:
+    path: /operation
+    controller: App\Controller\OperationController::operation
