--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -39,3 +39,10 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+# MAILER_DSN=smtps://smtp.gmail.com:465?encryption=ssl&auth_mode=login&username=cleanthis154@gmail.com&password=bqeaoydxjhibqjqq
+MAILER_DSN=gmail://cleanthis154@gmail.com:manqs154@default
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
