Debut du travail mise en place du twig et chengament de route pour le travail

--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -33,14 +33,14 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/CleanThis?serverVersion=10.4.32-MariaD
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 # MAILER_DSN=smtps://smtp.gmail.com:465?encryption=ssl&auth_mode=login&username=cleanthis154@gmail.com&password=bqeaoydxjhibqjqq
-MAILER_DSN=gmail://cleanthis154@gmail.com:yiosgfrngaqjhfqc@default
+MAILER_DSN=gmail://cleanthis154@gmail.com:njbfvaydemfqnrkx@default
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
