--- a/SYMFONY/composer.json
+++ b/SYMFONY/composer.json
@@ -33,6 +33,7 @@
         "symfony/property-info": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
+        "symfony/security-core": "7.0.*",
         "symfony/serializer": "7.0.*",
         "symfony/stimulus-bundle": "^2.16",
         "symfony/string": "7.0.*",
@@ -96,7 +97,7 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.5",
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.0.*",
         "symfony/css-selector": "7.0.*",
