--- a/SYMFONY/config/packages/security.yaml
+++ b/SYMFONY/config/packages/security.yaml
@@ -1,17 +1,16 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+    # Configuration for password hashers and providers
     password_hashers:
         App\Entity\User:
             algorithm: auto
 
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
             entity:
                 class: App\Entity\User
                 property: email
 
+    # Configuration for firewalls
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -21,21 +20,6 @@ security:
             lazy: true
             provider: app_user_provider
 
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
+    # Access control configuration
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-
-    when@test:
-        security:
-            password_hashers:
-                # By default, password hashers are resource intensive and take time. This is
-                # important to generate secure password hashes. In tests however, secure hashes
-                # are not important, waste resources and increase test times. The following
-                # reduces the work factor to the lowest possible values.
-                App\Entity\User:
-                    algorithm: auto
-                    cost: 4 # Lowest possible value for bcrypt
-                    time_cost: 3 # Lowest possible value for argon
-                    memory_cost: 10 # Lowest possible value for argon
+        # Add your access control rules here
