--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -43,14 +43,13 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 # MAILER_DSN=smtps://smtp.gmail.com:465?encryption=ssl&auth_mode=login&username=cleanthis154@gmail.com&password=bqeaoydxjhibqjqq
-MAILER_DSN=gmail://cleanthis154@gmail.com:yiosgfrngaqjhfqc@default
+# MAILER_DSN=gmail://cleanthis154@gmail.com:yiosgfrngaqjhfqc@default
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
 # MAILER_DSN=gmail://USERNAME:PASSWORD@default
 ###< symfony/google-mailer ###
-=======
-MAILER_DSN=smtp://smtp.gmail.com:587?encryption=tls&auth_mode=oauth2&username=cleanthis154@gmail.com&password=your_access_token
+# MAILER_DSN=smtp://smtp.gmail.com:587?encryption=tls&auth_mode=oauth2&username=cleanthis154@gmail.com&password=your_access_token
 
 #MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
@@ -63,4 +62,4 @@ MAILER_DSN=smtp://smtp.gmail.com:587?encryption=tls&auth_mode=oauth2&username=cl
 MAILER_DSN=mailjet+api://cce965de02ab6f704665944055aaca6b:b70070aba26c7358977cd946ab085588@api.mailjet.com
 # #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com
 ###< symfony/mailjet-mailer ###
->>>>>>> registration
+
