--- a/SYMFONY/config/routes.yaml
+++ b/SYMFONY/config/routes.yaml
@@ -13,3 +13,6 @@ confirmation:
     path: /confirmation
     controller: App\Controller\ConfirmationController::index
 
+generate_pdf:
+    path: /pdf
+    controller: App\Controller\PdfController::generatePdf
