--- a/SYMFONY/config/packages/security.yaml
+++ b/SYMFONY/config/packages/security.yaml
@@ -48,11 +48,9 @@ security:
     access_control:
 
         - { path: ^/admin, roles: ROLE_EXPERT }
-        - { path: ^/employe, roles: ROLE_EXPERT }
         - { path: ^/profile, roles: ROLE_SENIOR }
-        - { path: ^/employe, roles: ROLE_SENIOR }
         - { path: ^/profile, roles: ROLE_JUNIOR }
-        - { path: ^/employe, roles: ROLE_JUNIOR }
+        - {path: ^/user, roles: [ROLE_EXPERT, ROLE_SENIOR, ROLE_JUNIOR]}
 
      
 
