--- a/SYMFONY/config/routes.yaml
+++ b/SYMFONY/config/routes.yaml
@@ -18,8 +18,9 @@ confirmation:
 
 
 generate_pdf:
-    path: /pdf
+    path: user/pdf/{id}
     controller: App\Controller\PdfController::generatePdf
+    methods: get
 
 
 
