--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -67,3 +67,5 @@ MAILER_DSN=mailjet+api://cce965de02ab6f704665944055aaca6b:b70070aba26c7358977cd9
 # #MAILER_DSN=mailjet+smtp://PUBLIC_KEY:PRIVATE_KEY@in-v3.mailjet.com
 ###< symfony/mailjet-mailer ###
 
+# Authentification google
+GOOGLE_CLIENT_ID=138280259045-m80e334rk22annjipq12n2ec0ulugnhh
