--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -69,3 +69,4 @@ MAILER_DSN=mailjet+api://cce965de02ab6f704665944055aaca6b:b70070aba26c7358977cd9
 
 # Authentification google
 GOOGLE_CLIENT_ID=138280259045-m80e334rk22annjipq12n2ec0ulugnhh
+GOOGLE_CLIENT_SECRET=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
