--- a/SYMFONY/composer.json
+++ b/SYMFONY/composer.json
@@ -11,11 +11,9 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.1",
-
         "dompdf/dompdf": "^3.0",
-
+        "google/apiclient": "^2.16",
         "knplabs/knp-paginator-bundle": "^6.3",
-
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.28",
         "symfony/asset": "7.0.*",
