--- a/SYMFONY/config/services.yaml
+++ b/SYMFONY/config/services.yaml
@@ -5,6 +5,7 @@
 parameters:
     admin_email: 'cleanthis154@gmail.com'
     photo_directory: '%kernel.project_dir%/public/photoClient' # chemin vers la où on veut stocker les photos, %kerne..% represente le repertoire racine du projet
+    app.jwtsecret: '%env(JWT_SECRET)%'
 
 services:
     # Déclarez votre contrôleur en tant que service public
