--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=851bec46adf2f4e784530d7a6e26cf2e
 ###< symfony/framework-bundle ###
 
@@ -25,7 +25,8 @@ APP_SECRET=851bec46adf2f4e784530d7a6e26cf2e
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root@127.0.0.1:3306/CleanThis?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
+# DATABASE_URL="mysql://root@127.0.0.1:3306/CleanThis?serverVersion=10.4.32-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://id22234143_cleanthis154:Manqs154!@[2a02:4780:bad:c0de::14]:64574/id22234143_cleanthis?serverVersion=10.5.20-MariaDB&charset=utf8mb4"
 
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
