resolution disparission css en environement prod

--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=851bec46adf2f4e784530d7a6e26cf2e
 ###< symfony/framework-bundle ###
 
@@ -75,5 +75,3 @@ GOOGLE_CLIENT_ID=138280259045-m80e334rk22annjipq12n2ec0ulugnhh
 GOOGLE_CLIENT_SECRET=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
 
 JWT_SECRET='OjLaB3ll3Broue11e'
-
-PROJET_DIR=SYMFONY
