--- a/SYMFONY/.env
+++ b/SYMFONY/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=851bec46adf2f4e784530d7a6e26cf2e
 ###< symfony/framework-bundle ###
 
